[project]
name = "csid"
version = "0.1.0"
description = "How clustered sampling affects intrinsic-dimension estimators and their confidence intervals"
readme = "README.md"
authors = [
    { name = "Dave Berry", email = "berrydp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "scikit-dimension>=0.3.4",
    # scikit-dimension's sdist metadata resolves to numba 0.53.1, which caps at
    # Python 3.9. Pinned forward so the environment can build on 3.12.
    "numba>=0.60",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "matplotlib>=3.9",
    "joblib>=1.4",
]

[project.optional-dependencies]
# Only needed for the Day 5 transformer arm. Kept out of the default install so
# `uv sync` stays fast for the synthetic experiments, which are the contribution.
transformer = [
    "torch>=2.4",
    "transformers>=4.44",
    "datasets>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
